--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -13,7 +13,13 @@ body {
 .report-layout {
   margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
 
-  .section {
+  .report-row {
     margin-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid gray;
+  }
+
+  .report-section {
+    margin-top: 12px;
   }
 }
