Support header/text/charts

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -1,4 +1,4 @@
-@import "../../css/variables";
+@import (reference) "../../css/variables";
 
 * {
   font-family: @font-family-base;
@@ -14,12 +14,8 @@ body {
   margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
 
   .report-row {
-    margin-top: 24px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid gray;
   }
 
   .report-section {
-    margin-top: 12px;
   }
 }
