Make report to be responsive

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -24,3 +24,13 @@ body {
     display: table-cell;
   }
 }
+
+@media screen and (max-width: 630px) {
+  .report-row {
+    display: block !important;
+  }
+  .report-section {
+    width: 100%;
+    display:inline-block !important;
+  }
+}
