Fixed fonts issues

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -1,7 +1,7 @@
 @import (reference) "../../css/variables";
 
 * {
-  font-family: @font-family-base;
+  font-family: @font-family-base !important;
 }
 
 body {
