Added json, markdown sections Added global section Added line chart Added highlights Added some fonts Added more templates Added ability to set row style Improved reportsServer.js

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -1,13 +1,17 @@
 @import (reference) "../../css/variables";
 
 * {
-  font-family: @font-family-base !important;
+  font-family: @font-family-base;
 }
 
 body {
   background-color: @main-background-color;
   color: @font-color-base;
-  font-family: @font-family-base;
+  font-family: @font-family-base !important;
+}
+
+strong {
+  font-family: @font-family-titillium-semi-bold;
 }
 
 .report-layout {
