--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -3,9 +3,30 @@
   font-family: 'Titillium Web';
   src: url('../../assets/fonts/TitilliumWeb-Regular.ttf') format('truetype')
 }
+@font-face {
+  font-family: 'Titillium Web ExtraLight';
+  src: url('../../assets/fonts/TitilliumWeb-ExtraLight.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Titillium Web Light';
+  src: url('../../assets/fonts/TitilliumWeb-Light.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Titillium Web SemiBold';
+  src: url('../../assets/fonts/TitilliumWeb-SemiBold.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Titillium Web Bold';
+  src: url('../../assets/fonts/TitilliumWeb-Bold.ttf') format('truetype')
+}
+
 
 /** Fonts **/
 @font-family-titillium:                 "Titillium Web";
+@font-family-titillium-extra-light:     "Titillium Web ExtraLight";
+@font-family-titillium-light:           "Titillium Web Light";
+@font-family-titillium-semi-bold:       "Titillium Web SemiBold";
+@font-family-titillium-bold:            "Titillium Web Bold";
 @font-family-base:                      @font-family-titillium;
 @font-color-base:                       #555555;
 @font-size-header:                      28px;
