Fixed header font

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -14,6 +14,10 @@ strong {
   font-family: @font-family-titillium-semi-bold;
 }
 
+h1 {
+  font-family: @font-family-base !important;
+}
+
 .report-layout {
   margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
 
