--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,40 +1,40 @@
 /** Fonts **/
 @font-face {
-  font-family: 'Titillium Web';
-  src: url('../../assets/fonts/TitilliumWeb-Regular.ttf') format('truetype')
+  font-family: 'Source Sans Pro';
+  src: url('../../../sane-reports/assets/fonts/SourceSansPro-Regular.ttf') format('truetype')
 }
 @font-face {
-  font-family: 'Titillium Web ExtraLight';
-  src: url('../../assets/fonts/TitilliumWeb-ExtraLight.ttf') format('truetype')
+  font-family: 'Source Sans Pro ExtraLight';
+  src: url('../../../sane-reports/assets/fonts/SourceSansPro-ExtraLight.ttf') format('truetype')
 }
 @font-face {
-  font-family: 'Titillium Web Light';
-  src: url('../../assets/fonts/TitilliumWeb-Light.ttf') format('truetype')
+  font-family: 'Source Sans Pro Light';
+  src: url('../../../sane-reports/assets/fonts/SourceSansPro-Light.ttf') format('truetype')
 }
 @font-face {
-  font-family: 'Titillium Web SemiBold';
-  src: url('../../assets/fonts/TitilliumWeb-SemiBold.ttf') format('truetype')
+  font-family: 'Source Sans Pro SemiBold';
+  src: url('../../../sane-reports/assets/fonts/SourceSansPro-SemiBold.ttf') format('truetype')
 }
 @font-face {
-  font-family: 'Titillium Web Bold';
-  src: url('../../assets/fonts/TitilliumWeb-Bold.ttf') format('truetype')
+  font-family: 'Source Sans Pro Bold';
+  src: url('../../../sane-reports/assets/fonts/SourceSansPro-Bold.ttf') format('truetype')
 }
 
 
 /** Fonts **/
-@font-family-titillium:                 "Titillium Web";
-@font-family-titillium-extra-light:     "Titillium Web ExtraLight";
-@font-family-titillium-light:           "Titillium Web Light";
-@font-family-titillium-semi-bold:       "Titillium Web SemiBold";
-@font-family-titillium-bold:            "Titillium Web Bold";
-@font-family-base:                      @font-family-titillium;
-@font-color-base:                       #555555;
-@font-size-header:                      28px;
-@font-size-h1:                          24px;
-@font-size-h2:                          20px;
-@font-size-h3:                          16px;
-@font-size-h4:                          14px;
-@font-size-h5:                          12px;
+@font-family-source-sans-pro:                 "Source Sans Pro";
+@font-family-source-sans-pro-extra-light:     "Source Sans Pro ExtraLight";
+@font-family-source-sans-pro-light:           "Source Sans Pro Light";
+@font-family-source-sans-pro-semi-bold:       "Source Sans Pro SemiBold";
+@font-family-source-sans-pro-bold:            "Source Sans Pro Bold";
+@font-family-base:                            @font-family-source-sans-pro;
+@font-color-base:                             #555555;
+@font-size-header:                            28px;
+@font-size-h1:                                24px;
+@font-size-h2:                                20px;
+@font-size-h3:                                16px;
+@font-size-h4:                                14px;
+@font-size-h5:                                12px;
 
 /** Layout **/
 @content-margin-top:                    10px;
