--- a/src/components/Sections/SectionNumber.less
+++ b/src/components/Sections/SectionNumber.less
@@ -10,9 +10,10 @@
     top: 50%;
     transform: perspective(1px) translateY(-50%);
     .trend-num-text {
-      font-size: 22px;
+      font-size: 26px;
       display: inline-block;
       vertical-align: middle;
+      margin-top: -8px;
     }
 
     .trend-container {
@@ -24,6 +25,28 @@
         background-color: #FFF;
         color: #555555;
         box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.13), 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+
+        &.grey {
+          .trend-equal {
+            color: #FFF !important;
+          }
+          color: #FFF !important;
+          background-color: #B1B1B1;
+        }
+        &.red {
+          color: #FFF;
+          background-color: #FF1B15;
+        }
+        &.green {
+          color: #FFF;
+          background-color: #00CD33;
+        }
+
+        .trend-equal {
+          font-size: 14px;
+          color: #979797;
+          margin: 0 9px 0 3px
+        }
       }
     }
     .trend-message {
@@ -34,12 +57,6 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
-    }
-
-    .trend-equal {
-      font-size: 14px;
-      color: #979797;
-      margin-right: 3px;
     }
 
     .icon {
