- added extra styling for legend. - added colors by hashed value.

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -3,7 +3,7 @@
   margin: 0 !important;
   list-style: none !important;
   &.horizontal {
-    text-align: center;
+    text-align: left;
   }
   .recharts-legend-item {
     vertical-align: middle;
