non stacked bar chart and legend fixes + line YAxis

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -9,6 +9,7 @@
     vertical-align: middle;
     &.horizontal {
       display: inline-block;
+      margin-right: 5px;
     }
     .recharts-legend-icon-container {
       display: inline-block;
@@ -25,6 +26,9 @@
     .recharts-legend-item-value {
       float: right;
       margin-left: 10px;
+      &.minimal {
+        margin-left: 6px;
+      }
     }
   }
 }
