--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -14,6 +14,13 @@
       max-width: 100%;
       height: 23px;
     }
+    &:not(.horizontal) {
+    .recharts-legend-item-text {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
     .recharts-legend-icon-container {
       display: inline-block;
       vertical-align: top;
@@ -25,9 +32,6 @@
     }
     .recharts-legend-item-text {
       display: inline-block;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
     }
     .recharts-legend-item-value {
       float: right;
