--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -38,7 +38,7 @@ h1 {
       padding: 8px 15px;
       margin-top: 5px;
       font-weight: normal;
-      background-color: #F9F9FB;
+      background-color: #ebebec;
     }
   }
   .react-grid-item {
