--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -37,9 +37,9 @@
 @font-size-h5:                                12px;
 
 /** Layout **/
-@content-margin-top:                    10px;
+@content-margin-top:                    0;
 @content-margin-right:                  10px;
-@content-margin-bottom:                 10px;
+@content-margin-bottom:                 0;
 @content-margin-left:                   10px;
 
 /** colors **/
