--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -47,7 +47,7 @@ h1 {
       overflow: hidden;
       transition: none;
       z-index: 1;
-      .section-table {
+      &.section-table {
         height: auto !important; // override grid item height to fit content
       }
     }
