added support for phatomjs using core-js including es6 fixed height miss-render on charts fixed list section should accept column strings as well as objects

--- a/src/components/Sections/SectionChart/SectionBarChart.less
+++ b/src/components/Sections/SectionChart/SectionBarChart.less
@@ -1,4 +1,5 @@
 .section-bar-chart {
+  height: 100%;
   line {
     display: none;
   }
@@ -9,6 +10,7 @@
   }
 }
 .section-column-chart {
+  height: 100%;
   .recharts-legend-wrapper {
     right: 0 !important;
   }
