--- a/src/components/Sections/SectionChart/SectionChart.less
+++ b/src/components/Sections/SectionChart/SectionChart.less
@@ -1,8 +1,15 @@
 @import (reference) "../../../css/variables";
 
 .section-chart {
+  height: 100%;
+  width: 100%;
+  display: table;
   .section-title {
     font-size: 18px;
     margin: 10px 0;
+    display: table-row;
+  }
+  .section-chart-content {
+    display: table-row;
   }
 }
