fixed duplicate possible keys

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -52,4 +52,11 @@ h1 {
       }
     }
   }
+  .error-section {
+    border: 1px solid red;
+    padding: 5px;
+    .error-message {
+      color: fade(red, 80%);
+    }
+  }
 }
