added html section added items section added grouped list added sorting support for 3 item list in section list

--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -6,6 +6,8 @@
 
   .hljs {
     display: inline-block !important;
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
   }
 
   img {
