--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -1,13 +1,19 @@
 .section-list {
   .list-item {
+    display: flex !important;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
     margin: 5px 10px !important;
     .right-list-value {
-      width: 40%;
-      margin: 0 !important;
+      margin-right: 5px;
     }
     .left-list-value {
-      width: 60%;
       margin: 0 !important;
+    }
+    .content:last-child {
+      flex: 1;
+      text-align: center;
     }
   }
 }
