use date sort in line chart use table display in list for constant list appearance

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -1,18 +1,18 @@
 .section-list {
   .list-item {
-    display: flex !important;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    display: table-row !important;
     align-items: center;
     margin: 5px 10px !important;
     .right-list-value {
+      display: table-cell;
       margin-right: 5px;
     }
     .left-list-value {
+      display: table-cell;
       margin: 0 !important;
     }
     .content:last-child {
-      flex: 1;
+      display: table-cell;
       text-align: center;
     }
   }
