added test + fixed vertical alignment for list section

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -6,14 +6,17 @@
     .right-list-value {
       display: table-cell;
       margin-right: 5px;
+      vertical-align: middle;
     }
     .left-list-value {
       display: table-cell;
       margin: 0 !important;
+      vertical-align: middle;
     }
     .content:last-child {
       display: table-cell;
       text-align: center;
+      vertical-align: middle;
     }
   }
 }
