--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -80,6 +80,9 @@ h1 {
         margin-bottom: 10px;
         padding: 5px 10px;
       }
+      &.section-layout {
+        padding: 10px 0;
+      }
     }
   }
   .error-section {
