add capitalize to global style

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -16,6 +16,10 @@ h1 {
   font-family: @font-family-base !important;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .global-section {
   .global-section-row {
     display: flex;
