fix section wrapper markdown floating outside bounds

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -26,6 +26,7 @@ h1 {
     flex-direction: row;
     .subsection-wrapper {
       flex: 1;
+      width: 100%;
       .section-text {
         height: 100%;
       }
