fixed overall sections and section items paddings fixed section items auto height sometimes does not apply fixed section item description position added grouped list bold title avoid stacking tables in section markdown too avoid miss clalculation by the css media query added test cases

--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   .section-description {
-    padding: 5px 10px;
+    padding: 0 6px 5px;
   }
   .section-item {
     display: flex;
