--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -38,9 +38,9 @@
 
 /** Layout **/
 @content-margin-top:                    0;
-@content-margin-right:                  10px;
+@content-margin-right:                  0.5in;
 @content-margin-bottom:                 0;
-@content-margin-left:                   10px;
+@content-margin-left:                   0.5in;
 
 /** colors **/
 @main-background-color:                 #fcfcfc;
