--- a/src/components/Sections/SectionNumber.less
+++ b/src/components/Sections/SectionNumber.less
@@ -3,8 +3,10 @@
   margin: auto;
   width: 100%;
   height: 100%;
-  &.no-custom-background {
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   .number-container {
     position: relative;
     .trend-num-text {
@@ -21,7 +23,9 @@
         padding: 3px 10px 3px 5px;
         background-color: #FFF;
         color: #555555;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.13), 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+        &.no-custom-background {
+          box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.13), 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+        }
 
         &.grey {
           .trend-equal {
