--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -63,7 +63,7 @@ h1 {
       overflow: visible;
       transition: none;
       z-index: 1;
-      height: auto;
+      height: auto !important;
       transition-property: none;
       &.fixed {
       overflow: visible !important;
