added word wrap to section list

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -5,6 +5,9 @@
     display: table-row !important;
     align-items: center;
     margin: 5px 10px !important;
+    .content {
+      word-break: break-word;
+    }
     .right-list-value {
       display: table-cell;
       margin-right: 5px;
