add slight padding to lists sections fixed charts are not considered stack based on their data + check in test

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -7,6 +7,7 @@
     margin: 5px 10px !important;
     .content {
       word-break: break-word;
+      padding: 0 2px;
     }
     .right-list-value {
       display: table-cell;
