--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -50,6 +50,7 @@ h1 {
   }
   .report-section {
     display: table-cell;
+
     .section-header {
       padding: 8px 15px;
       margin-top: 5px;
@@ -76,11 +77,32 @@ h1 {
       &.section-table {
         height: auto !important; // override grid item height to fit content
       }
+
+      &.section-table, &.section-markdown {
+
+        table {
+          page-break-inside:auto
+        }
+
+        tr    {
+          page-break-inside:avoid;
+          page-break-after:auto;
+        }
+
+        thead {
+          display:table-header-group
+        }
+
+        tfoot {
+          display:table-footer-group
+        }
+      }
       .section-title {
         font-size: 18px;
         margin-bottom: 10px;
         padding: 5px 10px;
       }
+
     }
   }
   .error-section {
