Duration widget - support formats #33533

--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -20,7 +20,7 @@
           font-weight: bold;
           font-size: @font-size-h5;
         }
-        .minutes-number, .hours-number, .days-number, .time-unit {
+        .part-header, .time-unit {
           padding: 0 4px !important;
         }
 
