add support for section-force-full

--- a/src/components/Sections/SectionChart/SectionBarChart.less
+++ b/src/components/Sections/SectionChart/SectionBarChart.less
@@ -15,4 +15,9 @@
     right: 0 !important;
     top: 0 !important;
   }
+
+  &.section-force-full{
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
