add border to widgets

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -66,6 +66,10 @@ h1 {
       z-index: 1;
       height: auto !important;
       transition-property: none;
+      .section-chart{
+        border: 1px solid #DADBDB;
+        padding: 10px 12px 0;
+      }
       &.fixed {
       overflow: visible !important;
       position: fixed !important;
