--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -2,6 +2,7 @@
   padding-left: 0;
   margin: 0 !important;
   list-style: none !important;
+  background-color: #FFF;
   &.horizontal {
     text-align: left;
   }
