--- a/src/components/Sections/SectionChart/SectionPieChart.less
+++ b/src/components/Sections/SectionChart/SectionPieChart.less
@@ -1,6 +1,11 @@
 .section-pie-chart {
   height: 100%;
-  .customized-legend {
-    padding: 10px 0;
+
+  .recharts-legend-wrapper {
+    left: 0 !important;
+
+    .customized-legend {
+      padding: 10px 0;
+    }
   }
 }
