support section-force-full for bar chart

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -125,6 +125,10 @@ h1 {
             overflow-x: hidden;
           }
         }
+        .section-bar-chart{
+          overflow-y: auto;
+          overflow-x: hidden;
+        }
       }
     }
   }
