--- a/src/components/Sections/SectionChart/SectionLineChart.less
+++ b/src/components/Sections/SectionChart/SectionLineChart.less
@@ -8,6 +8,10 @@
   }
 
   .recharts-legend-wrapper {
+
+    &:not(.section-show-overflow) {
+      max-height: 100%;
+    }
     left: 0 !important;
     width: 100% !important;
     margin-top: -5px;
