--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -70,6 +70,11 @@ h1 {
         &.section-table {
           height: auto !important; // override grid item height to fit content
         }
+        .section-line-chart {
+          .recharts-legend-wrapper{
+            max-height: 100% !important;
+          }
+        }
       }
       transition-property: none;
       .section-chart {
