fix  bar legend

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -70,7 +70,7 @@ h1 {
         &.section-table {
           height: auto !important; // override grid item height to fit content
         }
-        .section-line-chart {
+        .section-line-chart, .section-bar-chart {
           .recharts-legend-wrapper{
             max-height: 100% !important;
           }
