--- a/src/components/Sections/SectionChart/SectionPieChart.less
+++ b/src/components/Sections/SectionChart/SectionPieChart.less
@@ -8,4 +8,10 @@
       padding: 10px 0;
     }
   }
+
+  &.section-pie-chart-horizontal {
+    .recharts-pie {
+      transform: translate(-20px, 0px);
+    }
+  }
 }
