--- a/src/components/Sections/SectionNumber.less
+++ b/src/components/Sections/SectionNumber.less
@@ -20,6 +20,7 @@
       display: inline-block;
       margin-left: 5px;
       .trend-box {
+        margin-top: 10px;
         border-radius: 100px;
         padding: 3px 10px 3px 5px;
         background-color: #FFF;
