- widget empty state fix

--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -15,6 +15,6 @@
       vertical-align: sub !important;
     }
   }
-
-  .icon-status-noresults-24-r:before { content: '\e9a3'; }
+  //
+  //.icon-status-noresults-24-r:before { content: '\e9a3'; }
 }
