Revert - support x-pos for table

--- a/src/components/Sections/SectionTable.less
+++ b/src/components/Sections/SectionTable.less
@@ -1,11 +1,5 @@
 .section-table {
-  overflow-x: scroll;
-
-  ::-webkit-scrollbar {
-    display: none;
-    width: 0;
-    height: 0;
-  }
+  overflow-x: hidden;
 
   thead {
     th {
