--- a/src/components/Sections/SectionTable.less
+++ b/src/components/Sections/SectionTable.less
@@ -1,6 +1,12 @@
 .section-table {
   overflow-x: hidden;
 
+  ::-webkit-scrollbar {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
   thead {
     th {
       overflow: hidden;
