add border to markdown

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -95,7 +95,7 @@ h1 {
         padding: 10px 12px 0;
       }
 
-      .section-table {
+      .section-table, .section-markdown {
         border: 1px solid #DADBDB;
         padding: 10px 12px;
       }
