improve more styles

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -163,6 +163,10 @@ h1 {
         }
 
         @media print {
+          .section-table {
+            overflow-y: hidden;
+          }
+
           .section-column-chart {
             overflow-y: hidden;
           }
