add border to number section

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -95,6 +95,11 @@ h1 {
         padding: 10px 12px 0;
       }
 
+      .section-number {
+        border: 1px solid #DADBDB;
+        padding: 10px 12px;
+      }
+
       .section-table {
         border: 1px solid #DADBDB;
         padding: 10px 12px;
