--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -95,12 +95,7 @@ h1 {
         padding: 10px 12px 0;
       }
 
-      .section-number {
-        border: 1px solid #DADBDB;
-        padding: 10px 12px;
-      }
-
-      .section-table {
+      .section-number, .section-table {
         border: 1px solid #DADBDB;
         padding: 10px 12px;
       }
