--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -3,6 +3,7 @@
 .section-markdown {
   word-wrap: break-word;
   white-space: pre-wrap;
+  height: auto;
 
   .hljs {
     display: inline-block !important;
