--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -6,4 +6,8 @@
   justify-content: center;
   flex-direction: column;
   height: 100%;
+  .icon-status-noresults-24-r {
+    background: @icon-status-noresults-24-r
+  }
 }
+
