--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -7,7 +7,9 @@
   flex-direction: column;
   height: 100%;
   .icon-status-noresults-24-r {
-    background: @icon-status-noresults-24-r
+    background: @icon-status-noresults-24-r;
+    width: 19px;
+    height: 19px;
   }
 }
 
