--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -49,4 +49,4 @@
 @brand-color-dark:                      #435c5d;
 @brand-second-color:                    #f2ae31;
 
-@status-noresults-24-r: data-uri('@{images-folder}/status-noresults-24-r.svg') no-repeat center;
+@icon-status-noresults-24-r: data-uri('@{images-folder}/status-noresults-24-r.svg') no-repeat center;
