--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -3,12 +3,16 @@
 .widget-empty-state {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   height: 100%;
+
   .icon-status-noresults-24-r {
     background: @icon-status-noresults-24-r;
     width: 19px;
     height: 19px;
+  }
+
+  .widget-empty-state-text {
+    padding: 10px 0;
   }
 }
