--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -94,6 +94,11 @@ h1 {
             }
           }
         }
+        &.section-show-empty-state {
+          .section-table {
+            height: inherit !important;
+          }
+        }
       }
 
       transition-property: none;
