fix auto page break section-markdown

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -84,7 +84,7 @@ h1 {
             }
           }
 
-          &.section-table {
+          &.section-table, &.section-markdown {
             height: auto !important; // override grid item height to fit content
           }
 
