force height on item when calculating layout height to use overflow height on charts that use autosizer with overflow visible added percentage view for pie charts and chart legend and removed pie chart percentage labels added percentage test removed unneeded spacings removed showValues injection on bar charts

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -16,7 +16,10 @@
       height: 23px;
     }
     &:not(.horizontal) {
+      display: flex;
+      justify-content: space-between;
     .recharts-legend-item-text {
+      flex: 2;
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
@@ -35,14 +38,20 @@
       display: inline-block;
     }
     .recharts-legend-item-value {
-      float: right;
-      margin-left: 10px;
+      flex: 1;
+      text-align: right;
+      &.percentage {
+        text-align: center;
+      }
       &.minimal {
         margin-left: 6px;
         display: inline-block;
         float: none;
         vertical-align: top;
       }
+    }
+    .recharts-legend-item-percentage {
+      padding-left: 5px;
     }
   }
 }
