--- a/src/components/Sections/SectionChart/SectionLineChart.less
+++ b/src/components/Sections/SectionChart/SectionLineChart.less
@@ -1,5 +1,6 @@
 .section-line-chart {
   height: 100%;
+  padding-bottom: 20px; // make up for the x-axis labels angle
 
   svg:not(:root) {
     &.recharts-surface {
