update no results icon

--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
   height: 100%;
 
   .icon-status-noresults-24-r {
