--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -4,6 +4,7 @@
   margin: auto;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   .section-title {
     font-size: 18px;
     margin-bottom: 10px;
