--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -108,7 +108,7 @@ h1 {
         padding: 10px 12px 0;
       }
 
-      .section-number, .section-table, .section-markdown {
+      .section-number, .section-table, .section-markdown, .section-duration {
         &:not(.page-break-section) {
           border: 1px solid #DADBDB;
           padding: 10px 12px;
