--- a/src/components/Sections/SectionChart/SectionBarChart.less
+++ b/src/components/Sections/SectionChart/SectionBarChart.less
@@ -1,4 +1,5 @@
 .section-bar-chart {
+  flex: 1;
   line {
     display: none;
   }
@@ -10,6 +11,7 @@
 }
 .section-column-chart {
   padding-top: 5px;
+  flex: 1;
   .recharts-legend-wrapper {
     right: 0 !important;
     top: -5px !important;
