--- a/src/components/Sections/SectionChart/SectionChart.less
+++ b/src/components/Sections/SectionChart/SectionChart.less
@@ -3,6 +3,8 @@
 .section-chart {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   .section-title {
     font-size: 18px;
   }
