show empty state

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+
+  .list-data-container{
+    height: 100%;
+  }
   .list-item {
     display: flex !important;
     flex-direction: row;
