show empty state

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -3,9 +3,6 @@
   flex-direction: column;
   width: 100%;
 
-  .list-data-container{
-    height: 100%;
-  }
   .list-item {
     display: flex !important;
     flex-direction: row;
@@ -31,5 +28,9 @@
       text-align: center;
       vertical-align: middle;
     }
+  }
+
+  .widget-empty-state{
+    margin-top: 30%;
   }
 }
