fix page offset

--- a/src/components/Sections/SectionChart/SectionBarChart.less
+++ b/src/components/Sections/SectionChart/SectionBarChart.less
@@ -7,6 +7,7 @@
     left: 0 !important;
     width: 100% !important;
     overflow: hidden;
+    max-height: 100% !important;
   }
 }
 .section-column-chart {
