fix page offset

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -42,7 +42,7 @@ h1 {
 }
 
 .report-layout {
-  margin: 0 20px;
+  margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
 
   .report-row {
     display: table;
