--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -39,9 +39,9 @@
 
 /** Layout **/
 @content-margin-top:                    0;
-@content-margin-right:                  0.5in;
+@content-margin-right:                  20px;
 @content-margin-bottom:                 0;
-@content-margin-left:                   0.5in;
+@content-margin-left:                   20px;
 
 /** colors **/
 @main-background-color:                 #fcfcfc;
