--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -37,6 +37,8 @@
 @font-size-h4:                                14px;
 @font-size-h5:                                12px;
 
+@font-title-weight:                           700;
+
 /** Layout **/
 @content-margin-top:                    0;
 @content-margin-right:                  20px;
