--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -148,7 +148,7 @@ h1 {
 
       .section-title {
         font-size: @font-size-h3;
-        font-weight: 700;
+        font-weight: @font-title-weight;
         max-height: 36px;
       }
 
