fix bar chart minimum sizing fix list empty state center with flex

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -3,6 +3,9 @@
   flex-direction: column;
   width: 100%;
 
+  .list-data-container {
+    flex: 1;
+  }
   .list-item {
     display: flex !important;
     flex-direction: row;
@@ -28,9 +31,5 @@
       text-align: center;
       vertical-align: middle;
     }
-  }
-
-  .widget-empty-state{
-    margin-top: 30%;
   }
 }
