--- a/src/components/Sections/SectionChart/SectionPieChart.less
+++ b/src/components/Sections/SectionChart/SectionPieChart.less
@@ -1,5 +1,7 @@
 .section-pie-chart {
   flex: 1;
+  display: flex;
+  align-items: baseline;
 
   .recharts-legend-wrapper {
     left: 0 !important;
