--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -5,11 +5,20 @@
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+
   .section-title {
     font-size: 18px;
     margin-bottom: 10px;
   }
   .duration-widget-container {
+    display: flex;
+    flex:1;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column;
+
     .duration-widget {
       font-weight: bold;
       font-size: @font-size-header + 4;
