--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -1,15 +1,24 @@
 @import (reference) "../../css/variables";
 
 .section-duration {
+  display: flex;
+  flex-direction: column;
   margin: auto;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+
   .section-title {
     font-size: 18px;
     margin-bottom: 10px;
   }
   .duration-widget-container {
+    display: flex;
+    flex:1;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column;
+
     .duration-widget {
       font-weight: bold;
       font-size: @font-size-header + 4;
