capitalize first letter - number widget & show forced time range message on charts & show forced time range on number widget

--- a/src/components/Sections/SectionNumber.less
+++ b/src/components/Sections/SectionNumber.less
@@ -52,7 +52,17 @@
       text-align: center;
       margin-top: 10px;
       padding: 0 7px;
-      font-size: 18px;
+      font-size: 1.2em;
+      text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+      font-weight: 700;
+
+      .color-warning{
+        text-shadow: none;
+      }
+      .demisto-number-sub-title{
+        font-size: 14px;
+        padding-top: 3px;
+      }
     }
 
     .icon {
