--- a/src/components/Sections/SectionNumber.less
+++ b/src/components/Sections/SectionNumber.less
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  line-height: normal;
 
   .number-container {
     position: relative;
