add demisto font

--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -19,6 +19,13 @@
   font-family: 'Source Sans Pro Bold';
   src: url('../../../sane-reports/assets/fonts/SourceSansPro-Bold.ttf') format('truetype')
 }
+@font-face {
+  font-family: 'demisto';
+  src: url('../../../sane-reports/assets/fonts/demisto.woff?11762378') format('woff'),
+  url('../../../sane-reports/assets/fonts/demisto.svg?11762378#demisto') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @images-folder:                 '../../../sane-reports/assets/images';
 
