chnage mttr icon

--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -38,7 +38,11 @@
           margin-top: -2px !important;
         }
       }
+      .icon-widget-stopper-24-l:before {
+        content: '\e841';
+      }
       .icon {
+        font-family: 'demisto';
         color: @brand-color-dark;
       }
     }
