extend style support for duration widget

--- a/src/components/Sections/SectionDuration.less
+++ b/src/components/Sections/SectionDuration.less
@@ -42,6 +42,7 @@
           color: @font-color-base;
           font-weight: bold;
           font-size: @font-size-h5;
+          display: inline-block;
         }
         .part-header, .time-unit {
           padding: 0 4px !important;
