change legend text-value ration to 4-1

--- a/src/components/Sections/SectionChart/SectionPieChart.less
+++ b/src/components/Sections/SectionChart/SectionPieChart.less
@@ -10,6 +10,14 @@
 
     .customized-legend {
       padding: 10px 0;
+
+      .recharts-legend-item {
+        &:not(.horizontal) {
+          .recharts-legend-item-text {
+            flex: 4;
+          }
+        }
+      }
     }
   }
 
