--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -11,9 +11,12 @@
     background: @icon-status-noresults-24-r;
     width: 19px;
     height: 19px;
+    margin-top: 10px;
   }
 
   .widget-empty-state-text {
+    font-size: 14px;
+    color: @color-description;
     padding: 10px 0;
   }
 }
