--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -50,5 +50,7 @@
 @brand-color:                           #618081;
 @brand-color-dark:                      #435c5d;
 @brand-second-color:                    #f2ae31;
+@color-text:                            rgb(64, 65, 66);
+@color-description:                     rgba(64, 65, 66, 0.7);
 
 @icon-status-noresults-24-r: data-uri('@{images-folder}/status-noresults-24-r.svg') no-repeat center;
