--- a/src/components/Sections/WidgetEmptyState.less
+++ b/src/components/Sections/WidgetEmptyState.less
@@ -17,6 +17,6 @@
   .widget-empty-state-text {
     font-size: 14px;
     color: @color-description;
-    padding: 10px 0;
+    margin: 10px 0;
   }
 }
