Row fields: last field in section does not have a line under it

--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -36,6 +36,10 @@
         width: 30%;
         word-break: break-word;
        }
+
+      &:last-child {
+        border-bottom: none;
+      }
     }
 
     .section-item-value {
