format date and generated report

--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -35,7 +35,11 @@
       .section-item-header {
         width: 30%;
         word-break: break-word;
-       }
+      }
+
+      &:last-child {
+        border-bottom: none;
+      }
     }
 
     .section-item-value {
