style grid field and section table

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -124,7 +124,8 @@ h1 {
       }
 
       .section-item-value {
-        .section-markdown {
+        .section-markdown,
+        .section-table {
           border: none;
           padding: 0;
         }
