--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -21,6 +21,18 @@
         padding-bottom: 9px;
         word-break: break-word;
       }
+
+      &:not(.first-column) {
+        padding-left: 15px;
+      }
+
+      &:not(.last-column) {
+        padding-right: 15px;
+      }
+
+      &:not(.last-row) {
+        padding-bottom: 30px;
+      }
     }
 
     &.row {
