style card section

--- a/src/components/Sections/ItemsSection.less
+++ b/src/components/Sections/ItemsSection.less
@@ -21,18 +21,6 @@
         padding-bottom: 9px;
         word-break: break-word;
       }
-
-      &:not(.first-column) {
-        padding-left: 15px;
-      }
-
-      &:not(.last-column) {
-        padding-right: 15px;
-      }
-
-      &:not(.last-row) {
-        padding-bottom: 30px;
-      }
     }
 
     &.row {
@@ -56,6 +44,24 @@
       flex: 1;
       white-space: pre-line;
       word-break: break-word;
+    }
+  }
+
+  &.cards-container {
+    .section-item {
+      &.card {
+        &:not(.first-column) {
+          padding-left: 15px;
+        }
+
+        &:not(.last-column) {
+          padding-right: 15px;
+        }
+
+        &:not(.last-row) {
+          padding-bottom: 30px;
+        }
+      }
     }
   }
 }
